; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/gadget/udc/extr_pxa25x_udc.c_pxa25x_udc_start.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/gadget/udc/extr_pxa25x_udc.c_pxa25x_udc_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_gadget = type { i32 }
%struct.usb_gadget_driver = type { i32 }
%struct.pxa25x_udc = type { i32, i32, %struct.TYPE_2__*, %struct.usb_gadget_driver* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.usb_gadget*, %struct.usb_gadget_driver*)* @pxa25x_udc_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pxa25x_udc_start(%struct.usb_gadget* %0, %struct.usb_gadget_driver* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.usb_gadget*, align 8
  %5 = alloca %struct.usb_gadget_driver*, align 8
  %6 = alloca %struct.pxa25x_udc*, align 8
  %7 = alloca i32, align 4
  store %struct.usb_gadget* %0, %struct.usb_gadget** %4, align 8
  store %struct.usb_gadget_driver* %1, %struct.usb_gadget_driver** %5, align 8
  %8 = load %struct.usb_gadget*, %struct.usb_gadget** %4, align 8
  %9 = call %struct.pxa25x_udc* @to_pxa25x(%struct.usb_gadget* %8)
  store %struct.pxa25x_udc* %9, %struct.pxa25x_udc** %6, align 8
  %10 = load %struct.usb_gadget_driver*, %struct.usb_gadget_driver** %5, align 8
  %11 = load %struct.pxa25x_udc*, %struct.pxa25x_udc** %6, align 8
  %12 = getelementptr inbounds %struct.pxa25x_udc, %struct.pxa25x_udc* %11, i32 0, i32 3
  store %struct.usb_gadget_driver* %10, %struct.usb_gadget_driver** %12, align 8
  %13 = load %struct.pxa25x_udc*, %struct.pxa25x_udc** %6, align 8
  %14 = getelementptr inbounds %struct.pxa25x_udc, %struct.pxa25x_udc* %13, i32 0, i32 0
  store i32 1, i32* %14, align 8
  %15 = load %struct.pxa25x_udc*, %struct.pxa25x_udc** %6, align 8
  %16 = getelementptr inbounds %struct.pxa25x_udc, %struct.pxa25x_udc* %15, i32 0, i32 2
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  %18 = call i32 @IS_ERR_OR_NULL(%struct.TYPE_2__* %17)
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %33, label %20

20:                                               ; preds = %2
  %21 = load %struct.pxa25x_udc*, %struct.pxa25x_udc** %6, align 8
  %22 = getelementptr inbounds %struct.pxa25x_udc, %struct.pxa25x_udc* %21, i32 0, i32 2
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load %struct.pxa25x_udc*, %struct.pxa25x_udc** %6, align 8
  %27 = getelementptr inbounds %struct.pxa25x_udc, %struct.pxa25x_udc* %26, i32 0, i32 1
  %28 = call i32 @otg_set_peripheral(i32 %25, i32* %27)
  store i32 %28, i32* %7, align 4
  %29 = load i32, i32* %7, align 4
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %32

31:                                               ; preds = %20
  br label %36

32:                                               ; preds = %20
  br label %33

33:                                               ; preds = %32, %2
  %34 = load %struct.pxa25x_udc*, %struct.pxa25x_udc** %6, align 8
  %35 = call i32 @dump_state(%struct.pxa25x_udc* %34)
  store i32 0, i32* %3, align 4
  br label %38

36:                                               ; preds = %31
  %37 = load i32, i32* %7, align 4
  store i32 %37, i32* %3, align 4
  br label %38

38:                                               ; preds = %36, %33
  %39 = load i32, i32* %3, align 4
  ret i32 %39
}

declare dso_local %struct.pxa25x_udc* @to_pxa25x(%struct.usb_gadget*) #1

declare dso_local i32 @IS_ERR_OR_NULL(%struct.TYPE_2__*) #1

declare dso_local i32 @otg_set_peripheral(i32, i32*) #1

declare dso_local i32 @dump_state(%struct.pxa25x_udc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
